--- a/Frontend/src/translations/sv.json
+++ b/Frontend/src/translations/sv.json
@@ -46,210 +46,262 @@
   "form": {
     "steps": {
       "basicInfo": "Grundläggande information",
-      "exterior": "Utvändigt",
-      "interior": "Invändigt",
+      "exterior": "Utsida",
+      "interior": "Insida",
       "heating": "Uppvärmning",
-      "technical": "Husautomation",
-      "personalInfo": "Personlig information"
+      "kitchen": "Kök",
+      "technical": "Husteknik",
+      "personalInfo": "Personuppgifter"
     },
     "fields": {
+      "applicationName": "Ansökans rubrik",
       "city": "Stad",
       "province": "Landskap",
       "budget": "Budget",
       "houseSize": "Husets storlek",
       "bedrooms": "Antal sovrum",
-      "utilityRoom": "Pannrum",
-      "utilityRoomDetails": "Pannrum - Ytterligare information",
-      "mudroom": "Förstuga",
-      "mudroomDetails": "Förstuga - Ytterligare information",
+      "utilityRoom": "Grovkök",
+      "utilityRoomDetails": "Grovkök – Mer information",
+      "mudroom": "Groventré",
+      "mudroomDetails": "Groventré – Mer information",
       "terrace": "Terrass",
-      "terraceDetails": "Terrass - Ytterligare information",
+      "terraceDetails": "Terrass – Mer information",
       "carport": "Carport",
-      "carportDetails": "Carport - Ytterligare information",
+      "carportDetails": "Carport – Mer information",
+      "carportHowMany": "För hur många bilar?",
       "garage": "Garage",
-      "garageDetails": "Garage - Ytterligare information",
+      "garageDetails": "Garage – Mer information",
+      "garageHowMany": "För hur många bilar?",
+      "houseType": "Hustyp",
       "houseMaterial": "Husets material",
       "houseMaterialOther": "Annat material",
-      "roof": "Tak",
-      "roofOther": "Annat tak",
+      "houseShape": "Husets form",
+      "houseShapeOther": "Annan husform",
+      "houseStyle": "Husets stil",
+      "roof": "Yttertak",
+      "roofOther": "Annat yttertak",
+      "ceiling": "Innertak",
       "floor": "Golv",
       "floorDetails": "Golvmaterial",
       "interiorWalls": "Innerväggar",
       "interiorWallsDetails": "Innerväggsmaterial",
-      "ceiling": "Innertak",
-      "ceilingDetails": "Innertaksmaterial",
-      "heatingType": "Uppvärmningstyp",
-      "heatingTypeOther": "Annan uppvärmningstyp",
-      "fireplace": "Öppen spis",
-      "fireplaceHeatStorage": "Värmelagring",
-      "bakingOven": "Bakugn",
-      "bakingOvenDetails": "Bakugn - Ytterligare information",
-      "otherInfo": "Övrig information",
-      "interestedIn": "Jag är intresserad av",
-      "interestedInOther": "Annan intresse",
-      "wantsInOffer": "Jag vill att erbjudandet inkluderar",
-      "wantsInOfferOther": "Annan inkluderad tjänst",
-      "personalStatus": "Jag är",
-      "additionalInfo": "Övrig information",
-      "technicalFeatures": "Tekniska funktioner",
-      "quote": "Offert",
-      "customerStatus": "Kundstatus",
-      "hasPlot": "Har du en tomt?",
-      "directElectricHeating": "Direkt elvärme",
-      "applicationName": "Ansökans titel",
+      "ceilingDetails": "Innertakets material",
+      "stories": "Våningar",
+
+      "heatingType": "Uppvärmningssätt",
+      "heatingTypeOther": "Annat uppvärmningssätt",
       "heatingMethod": "Uppvärmningsmetod",
       "heatingMethodOther": "Annan uppvärmningsmetod",
+      "delivery": "Leverans",
+      "deliveryOther": "Annat leveranssätt",
+
+      "fireplace": "Öppen spis / Eldstad",
+      "fireplaceHeatStorage": "Värmelagrande",
+      "bakingOven": "Bakarugn",
+      "bakingOvenDetails": "Mer information om bakarugn",
       "kitchenType": "Kök",
-      "kitchenAccessories": "Kökstillbehör"
+      "kitchenAccessories": "Köksutrustning",
+      "otherInfoIndoor": "Övrig information",
+      "interestedIn": "Jag är intresserad av",
+      "interestedInOther": "Annat intresse",
+      "wantsInOffer": "Jag vill att offerten ska inkludera",
+      "wantsInOfferOther": "Annat offertinnehåll",
+      "personalStatus": "Jag är",
+      "additionalInfo": "Ytterligare information",
+      "technicalFeatures": "Husteknik",
+      "customerStatus": "Kundstatus",
+      "otherInfo": "Övrig information",
+      "hasPlot": "Har du en tomt?",
+      "directElectricHeating": "Direkt elvärme"
     },
     "options": {
       "yes": "Ja",
       "no": "Nej",
-      "dontKnow": "Vet inte än",
-      "other": "Annan",
-      "otherWhat": "Annan, vad?",
+      "dontKnow": "Vet inte ännu",
+      "other": "Annat",
+      "otherWhat": "Annat, vad?",
       "selectOption": "Välj alternativ",
+      "selectDeliveryOption": "Välj leveranssätt",
       "selectCity": "Välj stad",
+      "selectstories": "Hur många våningar?",
+      "selectceiling": "Välj innertak",
+      "selectinteriorWalls": "Välj innerväggar",
+      "selectkitchenType": "Välj kök",
+      "selectkitchenAccessories": "Välj köksutrustning",
+      "fieldRequired": "Obligatoriskt fält",
+
+      "selectfloor": "Välj golv",
       "selectProvince": "Välj landskap",
       "selectAmount": "Välj antal",
+      "selecthouseType": "Välj hustyp",
+      "selecthouseMaterial": "Välj husets material",
+      "selecthouseShape": "Välj husets form",
+      "selecthouseStyle": "Välj husets stil",
+      "selectdelivery": "Välj leveranssätt",
+
+      "selectDeliveryType": "",
       "selectMaterial": "Välj material",
-      "selectRoof": "Välj tak",
-      "enterDetails": "Ange ytterligare information...",
-      "enterOther": "Annan - vad?",
-      "privatePerson": "Privatperson",
-      "company": "Företag",
-      "association": "Förening",
-      "municipality": "Kommun",
-      "fieldRequired": "Obligatoriskt Fält",
-      "wood": "Trä",
-      "timber": "Timber",
-      "CLT": "CLT",
-      "concrete": "Betong / Sten",
-      "noPreference": "Ingen Skillnad",
-      "metalRoof": "Plåttak / Seam tak",
-      "brick": "Tegel",
-      "felt": "Feltak",
-      "parquet": "Parkett",
-      "laminate": "Laminat",
-      "vinyl": "Vinyl",
-      "cork": "Kork",
-      "tile": "Kakel",
-      "plasterBoard": "Gipsskiva",
-      "lightConcrete": "Lättbetong",
-      "woodPanel": "Träpanel",
-      "lead1": "Överväger huspaket (Ingen finansiering)",
-      "lead2": "Letar efter ett lämpligt huspaket",
-      "lead3": "Tar in offerter för huspaket (Finansiering klar)",
-      "airSourceHeatPump": "Luftvärmepump",
-      "geothermalHeat": "Jordvärme",
-      "electric": "El",
-      "waterCirculatedHeating": "Vattencirkulerad golvvärme",
-      "woodHeating": "Veduppvärmning",
-      "districtHeating": "Fjärrvärme",
-      "minSize": "Minsta yta (m²)",
-      "maxSize": "Maximal yta (m²)",
+      "selectroof": "Välj yttertak",
+      "enterDetails": "Fyll i mer information...",
+      "enterOther": "Annat – vad?",
+
+      "provinces": {
+        
+      },
+
+      "houseMaterial": {
+        "wood": "Trä",
+        "timber": "Timmer",
+        "CLT": "CLT",
+        "concrete": "Betong / Sten",
+        "noPreference": "Ingen preferens",
+        "metalRoof": "Plåt / Falsat tak",
+        "brick": "Tegel",
+        "felt": "Papp",
+        "enterOther": "Annat – vad?"
+      },
+
+      "roof": {
+        "metalRoof": "Plåt / Falsat tak",
+        "brick": "Tegel",
+        "felt": "Papp",
+        "gableRoof": "Sadeltak",
+        "pulpitRoof": "Pulpettak",
+        "flatRoof": "Platt tak",
+        "noPreference": "Ingen preferens",
+        "enterOther": "Annat – vad?"
+      },
+
+      "floor": {
+        "parquet": "Parkett",
+        "laminate": "Laminat",
+        "vinyl": "Vinyl",
+        "cork": "Kork",
+        "tile": "Kakel",
+        "enterOther": "Annat – vad?"
+      },
+
+      "interiorWalls": {
+        "plasterBoard": "Gipsskiva",
+        "lightConcrete": "Lättbetong",
+        "woodPanel": "Träpanel",
+        "enterOther": "Annat – vad?"
+      },
+
+      "ceiling": {
+        "plasterBoard": "Gipsskiva",
+        "woodPanel": "Träpanel",
+        "vinyl": "Vinyl",
+        "enterOther": "Annat – vad?"
+      },
+
+      "lead1": "Funderingar på huspaket (ingen finansiering)",
+      "lead2": "Söker efter ett lämpligt huspaket",
+      "lead3": "Jämför huspaket (finansiering är klar)",
+
+      "houseType": {
+        "ownHouse": "Egnahemshus",
+        "pairHouse": "Parhus",
+        "leisureHouse": "Fritidshus",
+        "enterOther": "Annat – vad?"
+      },
+
+      "delivery": {
+        "movingReady": "Inflyttningsklart",
+        "decorationReady": "Inredningsklart",
+        "basicPackage": "Baspaket",
+        "enterOther": "Annat – vad?"
+      },
+
+      "stories": {
+        "1-floor": "1 våning",
+        "1.5-floors": "1,5 våningar",
+        "2-floors": "2 våningar",
+        "3+-floor": "3+ våningar",
+        "enterOther": "Annat – vad?"
+      },
+
+      "houseShape": {
+        "l-shape": "L-format hus",
+        "i-shape": "I-format hus",
+        "u-shape": "U-format hus",
+        "hillsideHouse": "Suterränghus",
+        "enterOther": "Annat – vad?"
+      },
+
+      "houseStyle": {
+        "modern": "Modern",
+        "classic": "Klassisk",
+        "traditional": "Traditionell",
+        "enterOther": "Annat – vad?"
+      },
+
+      "kitchenType": {
+        "i-kitchen": "I-kök",
+        "u-kitchen": "U-kök",
+        "l-kitchen": "L-kök",
+        "openKitchenIsland": "Öppet kök med köksö",
+        "noKitchen": "Jag vill inte att kök ska ingå i offerten",
+        "enterOther": "Annat – vad?"
+      },
+
+      "kitchenAccessories": {
+        "breakfastCabinet": "Frukostskåp",
+        "stoneCountertops": "Stenbänkskivor",
+        "enterOther": "Annat – vad?"
+      },
+
+      "heatingType": {
+        "geothermalHeating": "Bergvärme",
+        "airToWaterHeatPump": "Luft-vattenvärmepump",
+        "districtHeating": "Fjärrvärme",
+        "directElectricHeating": "Direkt elvärme",
+        "fireplaceOrStove": "Eldstad",
+        "excludeFromOfferHeating": "Jag vill inte att uppvärmning ingår i offerten",
+        "enterOther": "Annat – vad?"
+      },
+
+      "heatingMethod": {
+        "waterCirculatingUnderfloorHeating": "Vattenburen golvvärme",
+        "electricRadiators": "Elradiatorer",
+        "heatRecoveryVentilationUnit": "Värmeåtervinningsaggregat",
+        "airHeatPump": "Luftvärmepump",
+        "excludeFromOfferHeatingSystem": "Jag vill inte att värmesystem ingår i offerten",
+        "enterOther": "Annat – vad?"
+      },
+
+      "minSize": "Min storlek (m²)",
+      "maxSize": "Max storlek (m²)",
       "heatStoring": "Värmelagrande",
-      "airCirculationFireplace": "Öppen spis med cirkulerande luft",
-      "openFireplace": "öppen spis",
+      "airCirculationFireplace": "Cirkulationseldstad",
+      "openFireplace": "Öppen spis",
       "hasPlot": "Har du en tomt?",
-      "ownHouse": "Fristående hus",
-      "pairHouse": "Parhus",
-      "leisureHouse": "Fritidshus",
-      "otherHouseType": "Annat?",
-      "movingReady": "Inflyttningsklart",
-      "decorationReady": "Dekorationsklart",
-      "basicPackage": "Grundpaket",
-      "1-floor": "1 våning",
-      "1.5-floors": "1,5 våningar",
-      "2-floors": "2 våningar",
-      "3+-floor": "3+ våningar",
-      "gableRoof": "Satteltak",
-      "pulpitRoof": "Pulpettak",
-      "flatRoof": "Plattak",
-      "l-shape": "L-format hus",
-      "i-shape": "I-format hus",
-      "u-shape": "U-format hus",
-      "hillsideHouse": "Sutteränghus",
-      "modern": "Modern",
-      "classic": "Klassisk",
-      "traditional": "Traditionell",
-      "i-kitchen": "I-kök",
-      "u-kitchen": "U-kök",
-      "l-kitchen": "L-kök",
-      "openKitchenIsland": "Öppet kök med ö",
-      "noKitchen": "Jag vill inte ha kök inkluderat i offerten",
-      "breakfastCabinet": "Frukostskåp",
-      "stoneCountertops": "Stenbänkskivor"
+
+      "interestedIn": {
+        "homeAutomation": "Hemmautomation",
+        "solarElectricity": "Solenergi",
+        "evCharging": "Laddstation för elbil",
+        "surveillanceSystem": "Övervakningssystem",
+        "earthworks": "Markarbete",
+        "foundations": "Grunder",
+        "constructionManagement": "Byggledning",
+        "enterOther": "Annat – vad?"
+      },
+      "wantsInOffer": {
+        "hvac": "VVS-arbeten",
+        "electrical": "Elinstallationer",
+        "earthworks": "Markarbete",
+        "foundations": "Grunder",
+        "constructionManagement": "Byggledning",
+        "enterOther": "Annat – vad?"
+      }
     },
     "validation": {
       "required": "Obligatoriskt fält",
-      "selectOne": "Välj minst ett"
+      "selectOne": "Välj minst en"
     },
-    "technicalOptions": {
-      "homeAutomation": "Husautomation",
-      "solarElectricity": "Solenergi",
-      "evCharging": "Laddstation för elbil",
-      "securitySystem": "Säkerhetssystem",
-      "other": "Annan"
-    },
-    "quoteOptions": {
-      "hvac": "VVS-arbeten",
-      "electrical": "Elarbeten",
-      "other": "Annan"
-    }
-  },
-  "homepage": {
-    "hero": {
-      "title": "Hitta Ditt Drömhuspaket",
-      "subtitle": "Det enklaste sättet att jämföra huspaket och få offerter från pålitliga leverantörer. Fyll i en ansökan och låt oss hantera resten.",
-      "cta": "Starta Ansökningsprocessen",
-      "subtext": "Fyll i ansökan och få offerter från pålitliga husleverantörer"
-    },
-    "features": {
-      "dreamHome": {
-        "title": "Drömhem Planering",
-        "description": "Definiera dina önskemål och krav för ditt drömhem - vi hjälper dig hitta det perfekta huspaketet."
-      },
-      "easyProcess": {
-        "title": "Enkel Ansökningsprocess",
-        "description": "Fyll i en ansökan och få offerter från flera pålitliga husleverantörer."
-      },
-      "reliablePartners": {
-        "title": "Pålitliga Partners",
-        "description": "Vårt nätverk inkluderar endast noggrant utvalda, pålitliga husleverantörer."
-      },
-      "saveTime": {
-        "title": "Spara Tid och Möda",
-        "description": "Inget behov av att kontakta varje leverantör separat - vi hanterar det åt dig."
-      }
-    },
-    "process": {
-      "title": "Hur Processen Fungerar",
-      "steps": {
-        "apply": {
-          "title": "Fyll i Ansökan",
-          "description": "Berätta för oss om dina önskemål och krav för ditt nya hem."
-        },
-        "offers": {
-          "title": "Få Offerter",
-          "description": "Husleverantörer kommer att granska din ansökan och göra dig offerter."
-        },
-        "choose": {
-          "title": "Välj Bästa",
-          "description": "Jämför offerter och välj det bästa alternativet för dig."
-        }
-      }
-    },
-    "cta": {
-      "title": "Redo att Börja Planera Ditt Drömhem?",
-      "subtitle": "Fyll i ansökan nu och ta det första steget mot ditt nya hem.",
-      "button": "Fyll i Ansökan"
-    },
-    "blog": {
-      "title": "Senaste Artiklar",
-      "readMore": "Läs Mer →"
-    }
-  },
-  "kiertoilmaTakka": "Öppen spis med cirkulerande luft",
-  "avotakka": "Öppen spis"
+
+    "kiertoilmaTakka": "Cirkulationseldstad",
+    "avotakka": "Öppen spis"
+  }
 }
